# LocalLink

./: .gitignore  LICENSE  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  ErrorBoundary.jsx  main.jsx  tray.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/utils/: portValidation.js  portValidation.test.js
